[gd_scene load_steps=7 format=3 uid="uid://bvjes4dqxmily"]

[ext_resource type="Script" path="res://main_scene.gd" id="1_55j4o"]

[sub_resource type="Curve" id="Curve_3gfvg"]

[sub_resource type="CurveXYZTexture" id="CurveXYZTexture_hd0i4"]
curve_x = SubResource("Curve_3gfvg")

[sub_resource type="LabelSettings" id="LabelSettings_obvva"]
font_size = 30
font_color = Color(1, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_lul3g"]
font_size = 65

[sub_resource type="LabelSettings" id="LabelSettings_efdt0"]
font_size = 60

[node name="MainScene" type="Node2D"]
script = ExtResource("1_55j4o")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -10.0
offset_top = -14.0
offset_right = 1176.0
offset_bottom = 680.0
texture = SubResource("CurveXYZTexture_hd0i4")

[node name="error_label" type="Label" parent="."]
visible = false
offset_left = -1.0
offset_top = 217.0
offset_right = 1149.0
offset_bottom = 374.0
text = "Incorrect!"
label_settings = SubResource("LabelSettings_obvva")
horizontal_alignment = 1
vertical_alignment = 1

[node name="main_label" type="Label" parent="."]
offset_left = 1.0
offset_top = 37.0
offset_right = 1151.0
offset_bottom = 194.0
text = "Starting in 3"
label_settings = SubResource("LabelSettings_lul3g")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Time_label" type="Label" parent="."]
visible = false
offset_left = 485.0
offset_top = 529.0
offset_right = 668.0
offset_bottom = 612.0
text = "0.000s"
label_settings = SubResource("LabelSettings_efdt0")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_top = 529.0
offset_right = 1154.0
offset_bottom = 612.0
alignment = 1

[node name="start_timer" type="Timer" parent="."]

[node name="time_out_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="temp_false_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="temp_correct_timer" type="Timer" parent="."]
one_shot = true

[node name="question_bar" type="ProgressBar" parent="."]
offset_left = 1.0
offset_top = 445.0
offset_right = 1150.0
offset_bottom = 498.0
step = 1.0
show_percentage = false

[connection signal="timeout" from="time_out_timer" to="." method="_on_time_out_timer_timeout"]
